# pyCTG

./: LICENSE  README.md  pyproject.toml
pyctg/: __init__.py  load.py  main.py  synergy.py  titration.py
